fix: dialog should be able to scroll on mobile

--- a/src/sass/layout/_dialog.scss
+++ b/src/sass/layout/_dialog.scss
@@ -23,6 +23,11 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
+
+	@media screen and (max-width: 600px) {
+		position: absolute;
+		top: 60%;
+	}
 }
 
 
